
- Date:
  . Added DateTime::createFromImmutable(). (Trevor Suarez)

- Enchant:
  . Fixed bug #65406 (Enchant broker plugins are in the wrong place in windows
    builds). (Anatol)

- Filter:
  . Fixed bug #69202: (FILTER_FLAG_STRIP_BACKTICK ignored unless other
    flags are used). (Jeff Welch)
  . Fixed bug #69203 (FILTER_FLAG_STRIP_HIGH doesn't strip ASCII 127). (Jeff
    Welch)

- OpenSSL
  . Fixed bugs #68853, #65137 (Buffered crypto stream data breaks IO polling
    in stream_select() contexts) (Chris Wright)
  . Fixed bug #69197 (openssl_pkcs7_sign handles default value incorrectly)
    (Daniel Lowrey)
  . Fixed bug #69215 (Crypto servers should send client CA list)
    (Daniel Lowrey)

- Postgres:
  . Fixed bug #68741 (Null pointer dereference) (CVE-2015-1352). (Laruence)

- SPL:
   . Fixed bug #69227 (Use after free in zval_scan caused by
     spl_object_storage_get_gc). (adam dot scarr at 99designs dot com)

- SOAP:
   . Fixed bug #69293 (NEW segfault when using SoapClient::__setSoapHeader 
     (bisected, regression)). (Laruence)

- SQLITE:
   . Fixed bug #68760 (SQLITE segfaults if custom collator throws an exception).
     (Dan Ackroyd)
   . Fixed bug #69287 (Upgrade bundled libsqlite to 3.8.8.3). (Anatol)

19 Mar 2015, PHP 5.6.7

- Core:
  . Fixed bug #69174 (leaks when unused inner class use traits precedence).
    (Laruence)
  . Fixed bug #69139 (Crash in gc_zval_possible_root on unserialize).
    (Laruence)
  . Fixed bug #69121 (Segfault in get_current_user when script owner is not
    in passwd with ZTS build). (dan at syneto dot net)
  . Fixed bug #65593 (Segfault when calling ob_start from output buffering 
    callback). (Mike)
  . Fixed bug #68986 (pointer returned by php_stream_fopen_temporary_file
    not validated in memory.c). (nayana at ddproperty dot com)
  . Fixed bug #68166 (Exception with invalid character causes segv). (Rasmus)
  . Fixed bug #69141 (Missing arguments in reflection info for some builtin